--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "strictPropertyInitialization": false,
+    "strictNullChecks": false,
     "lib": [
       "ES2022",
       "dom"
